<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".PanduanActivity">

    <TextView
        android:id="@+id/tv_panduan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins_black"
        android:text="Panduan"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_guru"
        android:layout_width="182dp"
        android:layout_height="62dp"
        android:background="@android:color/darker_gray"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:text="Guru"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="113dp" />

    <Button
        android:id="@+id/btn_siswa"
        android:layout_width="190dp"
        android:layout_height="63dp"
        android:background="@color/white"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:text="Siswa"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="112dp" />

    <FrameLayout
        android:layout_width="370dp"
        android:layout_height="500dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guru"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/buat"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/buat1"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/buat2"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="78dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/buat3"
            android:textSize="13sp" />

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="113dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/buat4"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="140dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/materi"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="160dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/materi1"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="178dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/materi2"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="213dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/materi3"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="230dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/materi4"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="258dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/quiz"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="277dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/quiz1"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="295dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/quiz2"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="330dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/quiz3"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="348dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/quiz4"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="368dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/quiz5"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="388dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/quiz6"
            android:textSize="13sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>